Update applying zero shot prompting to llama 3.2 - built from scratch

--- a/Inference-Time Compute Scaling/Applying_Zero_Shot_Prompting_to_Llama_3_2_Built_From_Scratch.ipynb
+++ b/Inference-Time Compute Scaling/Applying_Zero_Shot_Prompting_to_Llama_3_2_Built_From_Scratch.ipynb
@@ -150,7 +150,7 @@
         }
       ],
       "source": [
-        "!pip install torch tiktoken blobfile"
+        "# !pip install torch tiktoken blobfile"
       ]
     },
     {
@@ -245,6 +245,42 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#load_state_dict(...)\n",
+        "    Loads model weights from file to memory (on correct device)\n",
+        "\n",
+        "#model.to(device)\n",
+        "    Moves model to the correct computation device for use"
+      ],
+      "metadata": {
+        "id": "wo5j9NsD_ELd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " # What happens if you don't use:\n",
+        "\n",
+        "    model.to(device)\n",
+        "\n",
+        "\n",
+        "after loading weights with: model.load_state_dict(torch.load(..., map_location=device))\n",
+        "\n",
+        "## Short Answer:\n",
+        "Even if the weights are loaded onto the correct device (map_location=device), the model itself may still reside on the default device (usually CPU). This can cause:<br><br>\n",
+        "1. Device mismatch errors: If your input tensors are on the GPU (cuda) but the model is still on the CPU, you'll get an error like:\n",
+        "\n",
+        "\n",
+        "    RuntimeError: Expected all tensors to be on the same device, but found at least two devices, cpu and cuda:0!\n",
+        "\n",
+        "2. Slower performance: If you're running inference on CPU by mistake (because the model stayed there), it will be much slower than running on GPU."
+      ],
+      "metadata": {
+        "id": "SBGQFfns_aXA"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import torch\n",
@@ -323,6 +359,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# tokenizer = ChatFormat(tokenizer)\n",
+        "Wraps the tokenizer with a custom formatting layer. Likely modifies how the input text is tokenized — e.g., formats prompts into chat-style messages:\n",
+        "    \n",
+        "    <|user|> What is 2+2? <|assistant|> 4\n",
+        "This is needed for models trained in chat or instruction-following format.\n",
+        "\n",
+        "## Why it's important:\n",
+        "* Instruction-tuned models often expect specific prompt structures (e.g., with special tokens like <|user|> and <|assistant|>).\n",
+        "* ChatFormat ensures the tokenizer produces input in the expected format, so the model responds correctly."
+      ],
+      "metadata": {
+        "id": "Ep_vcBzAAsn6"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from tokenizer import Llama3Tokenizer, ChatFormat, clean_text\n",
@@ -371,7 +424,7 @@
         "\n",
         "token_ids = generate(\n",
         "    model=model,\n",
-        "    idx=text_to_token_ids(PROMPT, tokenizer).to(device),\n",
+        "    idx=text_to_token_ids(PROMPT, tokenizer).to(device), # idx is the variable name for the input token IDs\n",
         "    max_new_tokens=MAX_NEW_TOKENS,\n",
         "    context_size=LLAMA32_CONFIG[\"context_length\"],\n",
         "    top_k=TOP_K,\n",
