Update beam search demonstration

--- a/Inference-Time Compute Scaling/Beam_Search_Demonstration.ipynb
+++ b/Inference-Time Compute Scaling/Beam_Search_Demonstration.ipynb
@@ -8735,6 +8735,36 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "use_fast=True → loads the FastTokenizer, which is implemented with 🤗 Tokenizers (a library written in Rust, wrapped in Python).\n",
+        "\n",
+        "* Much faster (several times) than the pure-Python implementation.\n",
+        "\n",
+        "* More efficient with large texts.\n",
+        "\n",
+        "* Exposes additional features like:\n",
+        "\n",
+        "  \n",
+        "    tokenizer.backend_tokenizer (gives access to the underlying Rust tokenizer).\n",
+        "\n",
+        "* Methods like tokenizer.is_fast (True for fast versions).\n",
+        "\n",
+        "* word_ids() mapping tokens back to original words — very useful for tasks like token classification.\n",
+        "\n",
+        "use_fast=False → loads the Python (slow) tokenizer from the transformers library.\n",
+        "\n",
+        "* Implemented fully in Python, so slower.\n",
+        "\n",
+        "* Sometimes more stable for rare or very new models (if the fast version hasn’t been added yet).\n",
+        "\n",
+        "* Some custom tokenization behaviors may only exist in the slow version."
+      ],
+      "metadata": {
+        "id": "ugK5nxP2GNXm"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from transformers import AutoModelForCausalLM, AutoTokenizer, AutoModelForSequenceClassification\n",
@@ -9304,6 +9334,33 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "In PyTorch (and therefore Hugging Face models), .eval() is a method that switches the model into evaluation (inference) mode.\n",
+        "\n",
+        "🔹 Why do we need .eval()?\n",
+        "\n",
+        "* Some layers behave differently during training vs inference:\n",
+        "\n",
+        "  * Dropout layers\n",
+        "\n",
+        "    * Training: randomly zero out some neurons to prevent overfitting.\n",
+        "\n",
+        "    * Eval: turned off (no random dropping, full signal passes).\n",
+        "\n",
+        "  * Batch Normalization layers\n",
+        "\n",
+        "    * Training: normalize using the current batch’s statistics (mean, variance).\n",
+        "\n",
+        "    * Eval: use the running averages collected during training (stable statistics).\n",
+        "\n",
+        "Without .eval(), the model may still apply dropout or unstable batch norm during inference, giving inconsistent results."
+      ],
+      "metadata": {
+        "id": "ICjlcgwQHren"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Load reward model (PRM approximation)\n",
@@ -9566,6 +9623,49 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "🔹 What **inputs means\n",
+        "\n",
+        "* In Python, ** is the dictionary unpacking operator.\n",
+        "\n",
+        "* It takes a dictionary and expands it into keyword arguments (key=value) when calling a function.\n",
+        "\n",
+        "Example:\n",
+        "\n",
+        "    def foo(a, b):\n",
+        "        print(a, b)\n",
+        "  \n",
+        "    d = {\"a\": 10, \"b\": 20}\n",
+        "    foo(**d)   # same as foo(a=10, b=20)\n",
+        "    # Output: 10 20"
+      ],
+      "metadata": {
+        "id": "3hp6_5PPKFz2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🔹 In your code\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "        score = reward_model(**inputs).logits[0].item()\n",
+        "\n",
+        "\n",
+        "* **inputs → passes tokenized tensors into the model.\n",
+        "\n",
+        "* .logits → raw classification outputs (before softmax).\n",
+        "\n",
+        "* [0] → take the first item in the batch.\n",
+        "\n",
+        "* .item() → convert from a tensor (e.g. tensor(0.56)) to a plain Python float (0.56)."
+      ],
+      "metadata": {
+        "id": "c0HxdRmgKVf0"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Simulate stepwise reward using a final-answer reward model\n",
@@ -9593,6 +9693,89 @@
       ],
       "metadata": {
         "id": "78xsRk1kBba4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* nx.DiGraph(): Creates a new directed graph object."
+      ],
+      "metadata": {
+        "id": "TQdh1bNYLJh5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🔹 do_sample\n",
+        "\n",
+        "This controls how tokens are chosen during generation:\n",
+        "\n",
+        "* do_sample=False\n",
+        "\n",
+        " * Use greedy decoding (or beam search if num_beams > 1).\n",
+        "\n",
+        " * Always picks the most likely next token.\n",
+        "\n",
+        " * Deterministic → same input = same output.\n",
+        "\n",
+        "* do_sample=True\n",
+        "\n",
+        " * Use sampling-based decoding (randomized).\n",
+        "\n",
+        " * Picks the next token from the probability distribution (e.g., softmax over vocab).\n",
+        "\n",
+        " * Controlled by parameters like:\n",
+        "\n",
+        "   * temperature (higher → more random, lower → more focused).\n",
+        "\n",
+        "   * top_k, top_p (sampling strategies).\n",
+        "\n",
+        " * Non-deterministic → can produce different outputs for the same input."
+      ],
+      "metadata": {
+        "id": "xWjsC4ZkL8uh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🔹 num_return_sequences\n",
+        "\n",
+        "This decides how many generated sequences you want back.\n",
+        "\n",
+        " * Must be ≤ num_beams when do_sample=False (beam search).\n",
+        "\n",
+        " * If do_sample=True, it can be >1 even with num_beams=1, since each run samples differently."
+      ],
+      "metadata": {
+        "id": "I1JY224hMtqr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🔹 In our code\n",
+        "\n",
+        "    outputs = reasoning_model.generate(\n",
+        "        input_ids=input_ids,\n",
+        "        max_new_tokens=64,\n",
+        "        do_sample=False,          # deterministic → beam search\n",
+        "        num_beams=N,              # search breadth\n",
+        "        temperature=0.9,          # has no effect unless do_sample=True\n",
+        "        num_return_sequences=N,   # return N sequences (from the beams)\n",
+        "        pad_token_id=reasoning_tokenizer.eos_token_id\n",
+        "    )\n",
+        "\n",
+        "\n",
+        "* do_sample=False → uses beam search.\n",
+        "\n",
+        "* num_return_sequences=N → returns the top N beams (ranked by probability).\n",
+        "\n",
+        "* temperature=0.9 → irrelevant here (only affects sampling, not beam search)."
+      ],
+      "metadata": {
+        "id": "b6MXKvH4M5Xh"
       }
     },
     {
@@ -9627,7 +9810,7 @@
         "\n",
         "    for i in range(N):\n",
         "        gen_text = reasoning_tokenizer.decode(outputs[i], skip_special_tokens=True)\n",
-        "        completion = gen_text.replace(formatted_prompt, \"\").strip()\n",
+        "        completion = gen_text.replace(formatted_prompt, \"\").strip() # This removes the prompt part from the generated text, leaving only the new content (the “completion”).\n",
         "        score = stepwise_prm_score(prompt, completion, reward_model, reward_tokenizer)\n",
         "        node_id = f\"0-{i}\"\n",
         "        graph.add_node(node_id, label=completion[:40]+\"...\", score=score)\n",
